--- a/BackendJS/package.json
+++ b/BackendJS/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
     "mysql2": "^3.14.1"
-  }
+  },
+  "name": "backendjs",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
